[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro-flow-cli"
version = "0.1.0"
description = "Hydrologist's Terminal Assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "fpdf2>=2.7.0"
    # Note: Heavy libraries are commented out for now to prevent timeout errors
    # "geopandas>=0.14.0",
    # "rasterio>=1.3.0" 
]

[project.scripts]
hydro = "hydro.cli:app"

# 👇 THIS IS THE FIX
[tool.setuptools]
packages = ["hydro"]